# MiniGQL

./: .gitignore  proj_graphdb.tgz
Proj_GraphDB/: dune-project  graph.dot  table.tex
Proj_GraphDB/_build/: .db  .digest-db  log
Proj_GraphDB/_build/default/: Proj_GraphDB.dune-package  Proj_GraphDB.install  Proj_GraphDB.opam
Proj_GraphDB/_build/default/.dune/: configurator  configurator.v2
Proj_GraphDB/_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
Proj_GraphDB/_build/default/.utop/: utop.ml-gen
Proj_GraphDB/_build/default/lib/: Proj_GraphDB.cma  Proj_GraphDB.cmxa  Proj_GraphDB.cmxs  display.pp.ml  graphstruct.pp.ml  instr.ml  instr.pp.ml  interf.ml  interf.pp.ml  lang.pp.ml  lexer.ml  lexer.pp.ml  parser.conflicts  parser.ml  parser.mly  parser.pp.ml  parser.pp.mli  parser__mock.ml.mock  parser__mock.ml.pp.mock  parser__mock.mli.inferred  sem.pp.ml  typing.ml  typing.pp.ml
Proj_GraphDB/_build/default/lib/.Proj_GraphDB.objs/: parser__mock.impl.all-deps  proj_GraphDB__Display.impl.all-deps  proj_GraphDB__Graphstruct.impl.d  proj_GraphDB__Instr.impl.d  proj_GraphDB__Interf.impl.all-deps  proj_GraphDB__Interf.impl.d  proj_GraphDB__Lang.impl.all-deps  proj_GraphDB__Lang.impl.d  proj_GraphDB__Lexer.impl.all-deps  proj_GraphDB__Parser.impl.d  proj_GraphDB__Parser.intf.d  proj_GraphDB__Sem.impl.all-deps  proj_GraphDB__Sem.impl.d  proj_GraphDB__Typing.impl.d
Proj_GraphDB/lib/: dune  lang.ml  sem.ml  typing.ml
Proj_GraphDB/test/: dune  tiny.q
Project/_build/: .db  .digest-db  .to-promote  log
(+137 files in other folders)
