(lang dune 3.13)

(name Proj_GraphDB)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(using menhir 3.0)

(package
 (name Proj_GraphDB)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
  ocaml
  dune
  ocamlgraph
  ppx_deriving)
 (tags
  (topics "to describe" your project)))

; for testing
(cram enable)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
